added second api and fixed Oauth error
