# routes/index.js
@@ -5,6 +5,7 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.use('/cars', require('./cars'));
+router.use('/buyers', require('./buyers'));
 
 router.get('/login', passport.authenticate('github'), (req, res) => {});
 
